--- a/servers/upload-server/package.json
+++ b/servers/upload-server/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/ilkkamtk/hybrid-upload-server#readme",
   "dependencies": {
+    "apidoc": "^1.2.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
