--- a/servers/auth-server/package.json
+++ b/servers/auth-server/package.json
@@ -2,9 +2,9 @@
   "name": "sssf-auth-server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/src/index.js",
+  "main": "dist/auth-server/src/index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/auth-server/src/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "postbuild": "npm run apidoc",
