--- a/servers/media-api/package.json
+++ b/servers/media-api/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "lint": "eslint --fix src test",
-    "test": "jest"
+    "test": "jest",
+    "apidoc": "apidoc -c apidoc.json -o public/"
   },
   "keywords": [],
   "author": "CJ R. <cj@null.computer> (https://w3cj.now.sh)",
@@ -18,6 +19,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "apidoc": "^1.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
